--- a/Lab/FirstAngular/src/app/shared/navbar/navbar.component.html
+++ b/Lab/FirstAngular/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<p>navbar works!</p>
+<mat-toolbar color="primary">
+  <a mat-raised-button [routerLink]="['/']">Home</a>
+  <a mat-raised-button [routerLink]="['/foods']">Foods</a>
+</mat-toolbar>
