--- a/Lab/FirstAngular/src/app/app.component.html
+++ b/Lab/FirstAngular/src/app/app.component.html
@@ -8,7 +8,8 @@
       <app-sidebar></app-sidebar>
     </div>
     <div class="main">
-      <app-home></app-home>
+      <!-- <app-home></app-home> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
